unpackaged/main/default/objects/Cloned_Milestone__c/Cloned_Milestone__c.object-meta.xml
<CustomObject>
    <description>Holds identical infromation from the Case Milestone Standard object because limitaions due to reporting and adding custom fields to the Case Milestone.</description>
    <label>Cloned Milestone</label>
    <nameField>
        <displayFormat>M-{00000}</displayFormat>
        <label>Milestone Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cloned Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>