unpackaged/main/default/objects/Cloned_Milestone__c/fields/Case_Milestone_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Milestone_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Id of the Case Milestone record</description>
    <label>Case Milestone Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>