unpackaged/main/default/objects/Cloned_Milestone__c/fields/Milestone_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Type_Id__c</fullName>
    <label>Milestone Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>