unpackaged/main/default/objects/Cloned_Milestone__c/fields/OverDue_Days__c.field-meta.xml
<CustomField>
    <fullName>OverDue_Days__c</fullName>
    <formula>value( Overdue_Mins__c ) / 60/24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>