unpackaged/main/default/objects/Cloned_Milestone__c/fields/Overdue_Hours__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Hours__c</fullName>
    <formula>value( Overdue_Mins__c ) / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue (Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>