unpackaged/main/default/objects/Cloned_Milestone__c/fields/ReOpened__c.field-meta.xml
<CustomField>
    <fullName>ReOpened__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ReOpened</label>
    <type>Checkbox</type>
</CustomField>