unpackaged/main/default/objects/Cloned_Milestone__c/fields/Target_Response_Hours__c.field-meta.xml
<CustomField>
    <fullName>Target_Response_Hours__c</fullName>
    <label>Target Response (Hours)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>