unpackaged/main/default/objects/Cloned_Milestone__c/fields/Violation__c.field-meta.xml
<CustomField>
    <fullName>Violation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Violation</label>
    <type>Checkbox</type>
</CustomField>